# homework_april2026

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
include/: alarm.h  buttons.h  font.h  font5x7.h  lcd_display.h  utils.h
src/: alarm.c  buttons.c  font.c  font5x7.c  lcd_display.c  loop.c  main.c  test.c  tui_main.c  utils.c
